--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,65 +2,43 @@
   <div class="flex-block-big">
 
     <div class="blue-bar">
-      <div class="h2-white">events - Index</div>
+      <div class="h2-white">Events - Index</div>
     </div>
 
     <br><br><br><br>
     <%= link_to "New event", new_event_path, :class => "btn btn-sm btn-primary" %>
-    <%= link_to 'Assign Person', new_spectator_path, :class => "btn btn-sm btn-warning" %>
+    <%= link_to 'Check Person In', new_spectator_path, :class => "btn btn-sm btn-warning" %>
 
     <br><br>
     <br>
     <% if @events.any? %>
     <% @events.each do |eve| %>
-    <div class="col-xs-3">
-      <div class="well2">
-
-        <%= link_to "#{eve.name}", event_path(eve), :class => "h2-black" %>
-        <!-- Javascript form toggle -->
-        <div class="edit_family pull-right">Edit</div>
+    <div class="well-event">
+      <%= link_to "#{eve.name}", event_path(eve), :class => "h2-black" %><br>
+      <%= eve.date.strftime("%A, %b %d") %><!-- Tuesday, Jan 28, 2015 -->
+      @ <%= eve.starttime.strftime("%I:%M %p") %><br><!-- Javascript form toggle -->
+      <div class="edit_family pull-right marg-">Quick Edit</div>
         <div class="edit_f">
           <%= form_for [eve] do |f| %>
-          <div class="input-group">
-            <%= f.text_field :name, :placeholder => 'Name', :class => 'form-control' %>
-            <div class="input-group-btn">
-              <%= f.submit "Save", :name => nil, class: "btn-search btn-sm btn-primary" %>
+            <div class="field">
+              <%= f.text_field :name, :placeholder => 'Event Name', :class => 'form-control input-lg' %>
             </div>
-          </div>
+
+            <div class="field">
+              <%= f.text_field :date, data:{ provide:'datepicker' }, :placeholder => 'Date of Event', :class => 'form-control input-lg'  %>
+            </div>
+            <div class="field">
+              <%= f.time_select :starttime, {:ampm => true}, :default => Time.now, :class => 'form-control time-select' %>
+            </div>
+              <%= f.submit "Save", :name => nil, class: "btn btn-sm btn-primary" %>
           <% end %>
         </div>
-
+    </div>  <!-- well-event end -->
         <%#= link_to "Edit",  edit_event_path(eve, @eve_id = eve.id), :class => "pull-right" %>
         <%#= link_to 'Add Person', new_spectator_path, :class => "btn custom-btn btn-primary" %>
-
-        <div class="people-box2">
-          <% @spectators.each do |spectator| %>
-          <!-- Filters only this event -->
-          <% if spectator.event.id === eve.id %>
-          <div class="single-person">
-            <span class="white">
-              <%= spectator.part.firstname %>
-              <%= spectator.part.lastname %>
-            </span>
-
-            <span class="black2">
-              <%= link_to "X", spectator, :class => "", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
-            </span>
-          </div>
-          <% end %>
-          <% end %>
-          <!-- Filter end -->
-        </div>
-        <!-- people-box2 end -->
-
-      </div>
-      <!-- well2 end -->
-    </div>
-    <!-- col2 end -->
     <% end %>
-  <% else %>
-    <h3 class="h2-white pull-left">No events Yet</h3>
+    <% else %>
+      <h3 class="h2-white pull-left">No events Yet</h3>
     <% end %>
-
-  </div>
+  </div>  <!-- flex block end -->
 </div>
