--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,1 +1,71 @@
-<%= link_to "Delete Event", event_path(@event), :class => "btn btn-sm btn-danger pull-right",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
+<div class="flex-container-big">
+  <div class="flex-block-big">
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="h2-white">Event - Show</div>
+        <br><br>
+
+        <h3><%= @event.name %></h3>
+        <p><%= @event.date.strftime("%A, %b %d, %Y") %></p><!-- Tuesday, Jan 28, 2015 -->
+        <span class="h5-grey">Starting</span>
+        <p><%= @event.starttime.strftime("%I:%M %p") %></p><br>
+        <span class="h5-grey">Location</span>
+        <p><%= @event.locationname %></p>
+        <span class="h5-grey">Address</span>
+        <p><%= @event.street %><br>
+           <%= @event.city %><%= @event.state %> <%= @event.zip %></p>
+        <span class="h5-grey">Recurring</span>
+        <% if @event.recurring === true %>
+        <p><%#= @event.recurring %>Yes</p>
+        <% else %>
+        <p> No </p>
+        <% end %>
+
+        <span class="h5-grey">Description</span>
+        <p><%= @event.description %></p>
+        <br>
+
+        <%= link_to "Delete Event", event_path(@event), :class => "btn btn-sm btn-danger pull-right",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
+
+        <!-- Javascript form toggle -->
+        <div class="edit_family btn btn-sm btn-warning">Edit Event</div>
+        <div class="edit_f">
+          <%= render "form" %>
+        </div>
+
+      </div>
+      <!-- col end -->
+      <div class="col-sm-4">
+
+        <!-- SHOWS only spectators in this Event -->
+        <div class="people-box">
+          <h4>Current Attendance  <%= @event.spectators.count %></h4>
+          <br>
+          <% @spectators.each do |spectator| %>
+          <!-- Filters only this event -->
+          <% if spectator.event.id === @event.id %>
+<!-- <div class="people-btn"> -->
+            <span class="grey-btn white">
+              <%= spectator.part.firstname %>
+              <%= spectator.part.lastname %>
+
+            <span class="X">
+              <%= link_to "X", spectator, :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
+            </span></span>
+<!-- </div> -->
+          <% end %>
+          <% end %>
+          <!-- Filter end -->
+          <br>
+          <%= link_to 'Add Person', new_spectator_path, :class => "btn-sm btn-primary" %>
+        </div>
+
+      </div>
+      <!-- col end -->
+    </div>
+    <!--row end -->
+
+  </div>
+  <!-- flex-block end -->
+</div>
+<!-- flex-container end -->
