--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,9 +5,10 @@
     <%= f.text_field :name, :placeholder => 'Event Name', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
-    <%#= f.date_select :date,:order => [:month, :day, :year], :class => 'form-control input-lg' %>
-    <%= f.text_field :date, data:{ provide:'datepicker' }, :placeholder => 'Date of Event', :class => 'form-control input-lg'  %>
+    <%= f.date_select :date,:order => [:month, :day, :year], :class => 'form-control input-lg' %>
+    <%#= f.text_field :date, data:{ provide:'datepicker' }, :placeholder => 'Date of Event', :class => 'form-control input-lg'  %>
     </div>
+
     <div class="field">
       <%= f.time_select :starttime, {:ampm => true}, :default => Time.now, :class => 'form-control time-select' %>
     </div><hr>
@@ -25,6 +26,9 @@
     </div>
     <div class="field">
     <%= f.text_field :zip, :placeholder => 'Zip', :class => 'form-control input-lg' %>
+    </div>
+    <div class="field">
+    <%= f.text_field :country, :placeholder => 'Country', :class => 'form-control input-lg' %>
     </div>
     <div class="field">
     <%= f.text_area :description, :placeholder => 'Description', :class => 'form-control input-lg' %>
