--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,10 +5,12 @@
         <div class="h2-white">Event - Show</div>
         <br><br>
 
+
+
         <h3><%= @event.name %></h3>
         <p><%= @event.date%></p><!-- .strftime("%A, %b %d, %Y")  Tuesday, Jan 28, 2015 -->
         <span class="h5-grey">Starting</span>
-        <p><%= @event.starttime %></p><br> <!--.strftime("%I:%M %p") -->
+        <p><%= @event.starttime.strftime("%I:%M %p") %></p><br> <!--.strftime("%I:%M %p") -->
         <span class="h5-grey">Location</span>
         <p><%= @event.locationname %></p>
         <span class="h5-grey">Address</span>
