--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,8 +133,9 @@ h6 {
   color: #999;
 }
 .va {
-  vertical-align: middle;
+  vertical-align: center;
 }
+
 
 .shift-down {
   padding-top: 10px;
@@ -216,28 +217,35 @@ h6 {
   font-size: 2.5em;
   font-family: 'Bangers', cursive;
   letter-spacing: 1px;
+  vertical-align: middle;
 }
 .logo a:hover {
   color: #fff;
   font-size: 2.5em;
   font-family: 'Bangers', cursive;
   letter-spacing: 1px;
+  vertical-align: middle;
 }
 .logo a:visited {
   color: $blue;
   font-size: 2.5em;
   font-family: 'Bangers', cursive;
   letter-spacing: 1px;
+  vertical-align: middle;
 }
 .logo a:active {
-  color: #111;
+  color: #fff;
   font-size: 2.5em;
   font-family: 'Bangers', cursive;
   letter-spacing: 1px;
+  vertical-align: middle;
 }
 .logo-box {
-  background-color: $black;
+  // background-color: $black;
   padding: 10px 0px;
+  width: 250px;
+  height: 70px;
+  float: left;
 }
 
 //
@@ -554,7 +562,7 @@ input[type="image"]
 //////////////////////// Topbar
 
 .topbar {
-  background-color: $midnight-light;
+  background-color: $midnight-dark;
   width: 100%;
   height: 70px;
   border-bottom: 3px solid #000;
@@ -574,7 +582,7 @@ input[type="image"]
   font-size: 1em;
 }
 .topbar a:hover {
-  color: #feaf21;
+  color: $blue;
   font-size: 1em;
   text-decoration: none;
 }
@@ -775,6 +783,10 @@ input[type="image"]
   max-width: 15px;
   padding-bottom: 5px;
 }
+.nav-icon-size {
+  max-width: 35px;
+  margin: 6px;
+}
 .solid {
   font-weight: bold;
   color: #feaf21;
@@ -908,8 +920,9 @@ li.selected {
 .blue-bar {
   background-color: $blue;
   height: 55px;
-  width: 245%;
+  width: 100%;
   padding: 8px;
+  // margin: -8px;
 }
 .pink-bar {
   background-color: $pink;
@@ -917,4 +930,57 @@ li.selected {
   width: 1000px;
   margin: -10px;
 }
-//
+
+
+/////////////// Side Navigation POPOUT
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 65px;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 0px;
+    transition: 0.3s;
+}
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+.close-menu {
+  font-size: 1.5em;
+  height: 70px;
+
+}
+.sidenav .closebtn  {
+    position: absolute;
+    top: 0;
+    font-size: 2.5em;
+    margin: auto 0;
+}
+#content-container {
+    transition: margin-left .3s;
+    margin-left: 65px;
+}
+
+// /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+// @media screen and (max-height: 450px) {
+//     .sidenav {padding-top: 15px;}
+//     .sidenav a {font-size: 18px;}
+// }
+#icon-menu {
+  width: 65px;
+  background-color: #111;
+  height: 100%;
+  position:fixed;
+}
