simple_calendar added with basic styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,11 @@
+/*
+*= require simple_calendar
+*/
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-datepicker3";
+@import "simple_calendar";
 
 
 
