--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,12 @@
    <p>test</p>
   </div><!-- search toggle end -->
 
+
+  <%= calendar number_of_days: 7 do |date| %>
+    <%= date %>
+  <% end %>
+
+
    </div>
   </div><!-- flex-block end -->
 </div><!-- flex-container end -->
