--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -26,7 +26,7 @@
               <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block) %>
                 <% capture_haml(day, sorted_events.fetch(day, []), &block) %>
               <% else %>
-                <li class="day-width"><% block.call day.strftime("%d"), sorted_events.fetch(day, []) %></li>
+                <li class="day-width"><% block.call day.strftime("%e"), sorted_events.fetch(day, []) %></li>
               <% end %>
             <% end %>
           <% end %>
