--- a/app/views/simple_calendar/_week_calendar.html.erb
+++ b/app/views/simple_calendar/_week_calendar.html.erb
@@ -1,4 +1,7 @@
-<div class="simple-calendar">
+<!-- not used -->
+
+
+<!-- <div class="simple-calendar">
   <div class="calendar-heading">
     <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
     <% if calendar.number_of_weeks == 1 %>
@@ -34,4 +37,4 @@
       <% end %>
     </tbody>
   </table>
-</div>
+</div>  -->
