basic styling on devise views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -815,6 +815,10 @@ input[type="image"]
   margin-right: 10px;
 }
 
+.space {
+  margin: 25px;
+}
+
 // input, textarea{
 //     background-color:#666;
 //     color: #FFF;
