add user stories to dashboard temporarily

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,10 @@
 <div class="space center">
 
-    <div class="well2">
+    <h2 class="pull-left">Edit <%= resource_name.to_s.humanize %></h2><br><br><br>
+
+    <div class="well">
 
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -37,7 +38,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", :class => "btn btn-primary" %>
   </div>
 <% end %>
 
