--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,41 @@
-<div class="flex-container-big">
-  <div class="flex-block-big">
+<!-- <div class="flex-container-big">
+  <div class="flex-block-big"> -->
 
-  <div class="h2-white pull-left">Welcome</div><br><br><br>
+  <div class="col-sm-12">
+  <br><br>
+  <div class="h2-white pull-left">Summary</div><br><br>
+    <p>Momentum is a software that allows non profit organizations or social movements to organize their internal structure. The development has been broken into phases with the first one below.</p>
+    <br>
+    <div class="edit_family btn btn-sm btn-primary h2-white">User Stories for Phase 1</div>
+       <div class="edit_f">
+      <div class="h2-white pull-left">User Stories for Phase 1</div><br><br>
+        <p>As a admin you are able to create families and people that belong to those families.</p>
+        <p>As a admin you are able to create departments and assign people to those departments</p>
+        <p>As a admin you are able to create events and check people into those events</p>
+        <p>As a admin you are able to view statistics total users, families, people, and track attendance and movement growth over time.</p>
 
+      <div class="h2-white pull-left">Still to do</div><br><br>
+        <p>Build out UI for dashboard and stats</p>
+        <p>As a admin you are able to create event needs</p>
+        <p>As a admin you are able to sign people to serve in those events to meet needs</p>
+        <p>As a user you are able to create an account. and view your dashboard</p>
+        <p>As a user you are able to see news, upcoming events, and serving opportunities on your dashboard</p>
+        <p>As a user you are able to sign up to serve in an event or department</p>
+        <p>As a admin you are able to approve and assign users serving in an event or department</p>
+        <p>As a user you will be able to give money or pay for group activities</p>
+        <p>As a user you will be able to become a leader and establish a group</p>
+        <p>As a leader you will be able to add people to your group and group details</p>
+        <p>As a leader you will be able to message your group members</p>
+        <p>As a user you will be able to email other people.</p>
+        <p>As a user you will be able to report a bug or development suggestion</p>
 
-<!-- Javascript form toggle -->
-<div class="edit_family btn btn-sm btn-warning">Toggle</div>
- <div class="edit_f">
-   <p>test</p>
-  </div><!-- search toggle end -->
+    </div>
 
-
-  <%= calendar number_of_days: 7 do |date| %>
-    <%= date %>
-  <% end %>
-
+    <%#= calendar number_of_days: 7 do |date| %>
+      <%#= date %>
+    <%# end %>
 
    </div>
-  </div><!-- flex-block end -->
-</div><!-- flex-container end -->
+
+<!-- </div>
+</div> -->
