Basic Readme, added to seeds

--- a/app/views/events/checkins.html.erb
+++ b/app/views/events/checkins.html.erb
@@ -5,8 +5,7 @@
       <div class="h2-white">Event Checkin</div>
     </div>
 
-    <br><br><br><br>
-
+    <br><br>
 
     <%#= link_to 'Check Person In', new_spectator_path, :class => "btn btn-sm btn-success" %>
     <div class="h2-white">Events Today</div>
@@ -21,7 +20,7 @@
     </div>  <!-- well-event end -->
     <% end %>
     <% else %>
-      <h3 class="h2-white pull-left">No events scheduled today</h3>
+      <h4 class="pull-left">No events scheduled today</h4>
     <% end %>
   </div>  <!-- flex block end -->
 </div>
