--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,18 +3,18 @@
 
   <div class="col-sm-12">
   <br><br>
-  <div class="h2-white pull-left">Summary</div><br><br>
+  <div class="h2-white pull-left">Summary</div><br><br><br>
     <p>Momentum is a software that allows non profit organizations or social movements to organize their internal structure. The development has been broken into phases with the first one below.</p>
     <br>
     <div class="edit_family btn btn-sm btn-primary h2-white">User Stories for Phase 1</div>
        <div class="edit_f">
-      <div class="h2-white pull-left">User Stories for Phase 1</div><br><br>
+      <div class="h2-white pull-left">User Stories for Phase 1</div><br><br><br>
         <p>As a admin you are able to create families and people that belong to those families.</p>
         <p>As a admin you are able to create departments and assign people to those departments</p>
         <p>As a admin you are able to create events and check people into those events</p>
         <p>As a admin you are able to view statistics total users, families, people, and track attendance and movement growth over time.</p>
 
-      <div class="h2-white pull-left">Still to do</div><br><br>
+      <div class="h2-white pull-left">Still to do</div><br><br><br>
         <p>Build out UI for dashboard and stats</p>
         <p>As a admin you are able to create event needs</p>
         <p>As a admin you are able to sign people to serve in those events to meet needs</p>
