more stat experimentation

--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -27,9 +27,9 @@
         <div class="white-box col-sm-1">
           <span class="stat-title">This Week - <%= @startweek %>-<%= @endweek %></span><br>
           <span class="stat-sub">Adult Attendance </span><br>
-          <%= @adultthisweek %>
+          <%= @adultthisweek %><br>
           <span class="stat-body">Kids Attendance</span> <br>
-          <%= @kidsthisweek %>
+          <%= @kidsthisweek %><br>
           <span class="stat-body">Serving </span> <br>
           <%= @servingthisweek %>
         </div>
